--- a/HepatitisExploratoryDataAnalysis.ipynb
+++ b/HepatitisExploratoryDataAnalysis.ipynb
@@ -756,6 +756,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "From the above graphs it is evident that numerical data except 'protime' are positively skewed.\n",
+    "To reduce the skewness 'Log-transformation' is applied"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### logarithmic transformation on data which are positively skewed."
    ]
   },
@@ -966,7 +974,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Bivariate Analysis (Numerical Vs Numerical) "
+    "### Bivariate Analysis (Numerical Vs Numerical) \n",
+    "#### Checking if the skewness is reduced."
    ]
   },
   {
